--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,10 +119,14 @@
   body {
     @apply bg-background text-foreground;
   }
-
   input[type="number"]::-webkit-inner-spin-button,
   input[type="number"]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
+  }
+
+  .react-flow__node {
+    visibility: visible !important;
+    opacity: 1 !important;
   }
 }
